--- a/package.json
+++ b/package.json
@@ -23,9 +23,17 @@
   },
   "homepage": "https://github.com/selfagency/typa#readme",
   "devDependencies": {
+    "eslint": "^4.18.2",
     "grunt": "^1.0.2",
+    "grunt-exec": "^3.0.0",
     "grunt-node-minify": "^1.3.5",
     "jest": "^22.4.2",
     "jit-grunt": "^0.10.0"
+  },
+  "dependencies": {
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-security": "^1.4.0"
   }
 }
