--- a/package.json
+++ b/package.json
@@ -27,16 +27,15 @@
     "codacy-coverage": "^2.1.0",
     "env-cmd": "^7.0.0",
     "eslint": "^4.18.2",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-security": "^1.4.0",
     "grunt": "^1.0.2",
     "grunt-exec": "^3.0.0",
     "grunt-node-minify": "^1.3.5",
     "jest": "^22.4.2",
     "jit-grunt": "^0.10.0"
   },
-  "dependencies": {
-    "eslint-plugin-import": "^2.9.0",
-    "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-security": "^1.4.0"
-  }
+  "dependencies": {}
 }
