--- a/.eslintrc
+++ b/.eslintrc
@@ -1,61 +1,85 @@
----
-env:
-  browser: true
-  commonjs: true
-  es6: true
-  jquery: true
-  node: true
-extends:
-- plugin:security/recommended
-parserOptions:
-  ecmaVersion: 8
-  ecmaFeatures:
-    jsx: true
-  sourceType: module
-plugins:
-- node
-- import
-- promise
-- security
-rules:
-  indent:
-  - 'off'
-  no-eval:
-  - error
-  no-script-url:
-  - error
-  linebreak-style:
-  - error
-  - unix
-  quotes:
-  - warn
-  - single
-  semi:
-  - error
-  - never
-  no-undef:
-  - 'off'
-  no-useless-escape:
-  - 'off'
-  key-spacing:
-  - 'off'
-  wrap-iife:
-  - error
-  - inside
-  handle-callback-err:
-  - error
-  callback-return:
-  - error
-  no-mixed-requires:
-  - error
-  no-unused-vars:
-  - warn
-  - argsIgnorePattern: 'i|res|next|^err'
-  security/detect-non-literal-fs-filename:
-  - 'off'
-  security/detect-non-literal-regexp:
-  - 'off'
-  security/detect-non-literal-require:
-  - 'off'
-  security/detect-object-injection:
-  - 'off'
+{
+  "parserOptions": {
+    "sourceType": "module",
+    "parser": "babel-eslint",
+    "allowImportExportEverywhere": true,
+    "ecmaVersion": 2017,
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
+  "env": {
+    "commonjs": true,
+    "es6": true
+  },
+  "extends": [
+    "plugin:security/recommended"
+  ],
+  "plugins": [
+    "security",
+    "standard"
+  ],
+  "rules": {
+    "indent": [
+      "off"
+    ],
+    "no-eval": [
+      "error"
+    ],
+    "no-script-url": [
+      "error"
+    ],
+    "linebreak-style": [
+      "warn",
+      "unix"
+    ],
+    "quotes": [
+      "warn",
+      "single"
+    ],
+    "semi": [
+      "warn",
+      "never"
+    ],
+    "no-undef": [
+      "off"
+    ],
+    "no-useless-escape": [
+      "off"
+    ],
+    "key-spacing": [
+      "off"
+    ],
+    "wrap-iife": [
+      "error",
+      "inside"
+    ],
+    "handle-callback-err": [
+      "error"
+    ],
+    "callback-return": [
+      "error"
+    ],
+    "no-mixed-requires": [
+      "error"
+    ],
+    "no-unused-vars": [
+      "warn",
+      {
+        "argsIgnorePattern": "i|res|next|^err"
+      }
+    ],
+    "security/detect-non-literal-fs-filename": [
+      "off"
+    ],
+    "security/detect-non-literal-regexp": [
+      "off"
+    ],
+    "security/detect-non-literal-require": [
+      "off"
+    ],
+    "security/detect-object-injection": [
+      "off"
+    ]
+  }
+}
