--- a/package.json
+++ b/package.json
@@ -46,6 +46,12 @@
     ]
   },
   "devDependencies": {
+    "@pika/plugin-build-node": "^0.9.2",
+    "@pika/plugin-build-types": "^0.9.2",
+    "@pika/plugin-build-web": "^0.9.2",
+    "@pika/plugin-bundle-node": "^0.9.2",
+    "@pika/plugin-bundle-web": "^0.9.2",
+    "@pika/plugin-standard-pkg": "^0.9.2",
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-node": "^11.1.0",
@@ -54,7 +60,8 @@
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-standard": "^4.0.0",
     "jest": "^25.5.2",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "typescript": "^3.8.3"
   },
   "dependencies": {}
 }
