--- a/package.json
+++ b/package.json
@@ -41,6 +41,13 @@
         "@pika/plugin-build-web"
       ],
       [
+        "pika-plugin-minify",
+        {
+          "ecma": 2015,
+          "module": true
+        }
+      ],
+      [
         "@pika/plugin-build-types"
       ]
     ]
